Fixed alignment on user log-out

--- a/haruka_theme/static/haruka_theme/css/custom.css
+++ b/haruka_theme/static/haruka_theme/css/custom.css
@@ -101,6 +101,7 @@
 
 #header #auth a {
     color: #0069D6;
+	margin-right: 24px;
 }
 
 #header #auth {
